static/css/base.css
/* ... */
body {
	background-image: url('/images/codam-blur.png');
	background-repeat: no-repeat;
	background-position: bottom right;
	background-size: auto 60%;
	background-attachment: fixed;
}

a {
	text-decoration: none;
	color: var(--primary);
	cursor: pointer;
}

a:hover,
a:active,
a:focus {
	text-decoration: underline;
}

a.external::after {
	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
	margin: 0 3px 0 5px;
}

@media (prefers-color-scheme: dark) {
	a.external::after {
		content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKAgMAAADwXCcuAAAAAXNSR0IB2cksfwAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAxQTFRFAAAA////////////OMA7qAAAAAR0Uk5TAP9gIFOYGRgAAAAqSURBVAjXY2BgDWAIZQpgcOCcwOCgJsDgMIOBwTmBgcHhgAMDDIaGOgAAgeUG8U0ghIsAAAAASUVORK5CYII=);
	}
}

.logo-light {
	content: url('/images/logo-light.svg');
}

.logo-dark {
	content: url('/images/logo-dark.svg');
}

.logo {
	content: var(--logo);
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Bebas Neue', sans-serif;
	font-weight: normal;
}

/* *************************************** */
/* Header                                  */
/* *************************************** */

header {
	display: flex;
	position: relative;
	height: 128px;
	padding: 16px;
	justify-content: flex-end;
	align-items: center;
	color: var(--white);
	white-space: nowrap;
}

.header-container-logo {
	flex: 1;
}
header #header-logo {
	display: inline-block;
	height: 128px;
}

header #header-nav {
	text-transform: uppercase;
	justify-content: flex-end;
	padding: 0 16px;
}

header #header-nav a {
	color: var(--dark);
}

header #header-nav a:hover {
	color: var(--primary);
	text-decoration: none;
}

header #dropdown-toggle-btn {
	display: none;
}

/*Scale: header*/
@media (max-width: 1000px) {
	header {
		height: 56px;
	}

	header #header-nav {
		font-size: medium;
	}
	header #header-logo {
		height: 64px;
	}

	header .navigation {
		display: none;
	}

	header #dropdown-toggle-btn {
		display: block;
		background: rgb(0, 0, 0);
		border-style: none;
		color: white;
		font-size: 36px;
	}
}

/* *************************************** */
/* Startup screen                          */
/* *************************************** */

.startup-screen {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	height: 100vh;
	text-align: center;
	padding: 0 32px;
}

.startup-screen .logo {
	max-width: 100%;
	width: 500px;
}

/* *************************************** */
/* Home                                    */
/* *************************************** */

.home-container {
	padding: 8px 48px 48px 64px;
}
.home-container .welcome-box .welcome-text {
	font-size: xx-large;
	font-weight: bold;
}

.home-container .welcome-box .sync {
	font-size: medium;
	font-family: monospace;
	margin-top: 5px;
	margin-bottom: 24px;
}

.home-container .welcome-box .sync::before {
	content: "// ";
	color: var(--pink);
	font-size: small;
	font-family: monospace;
}

.home-grid {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	gap: 24px;
	word-wrap: break-word;
}

.home-grid .home-grid-container {
	height: 128px;
	border: 1px solid var(--gray);
	padding: 48px 8px 8px 24px;
	color: inherit;
	text-decoration: none;
	border-top-right-radius: 28px;
	corner-shape: bevel;
}

.home-grid .home-grid-container:hover {
	border-color: var(--blue);
}

.home-grid .home-grid-container .container-icon {
	font-size: 36px;
	color: var(--gray);
	border: 1px solid var(--gray);
	padding: 10px 20px 10px 15px;
	border-top-right-radius: 14px;
	corner-shape: bevel;
	margin-bottom: 10px;
}

.home-grid .home-grid-container .container-title {
	font-size: larger;
	font-weight: bold;
	text-transform: uppercase;
}

.home-grid .home-grid-container .container-comment {
	color: var(--gray-dark);
	font-family: monospace;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

.home-grid .home-grid-container .container-comment::before {
	content: '// ';
}

#dropdown-nav {
	display: flex;
	flex-direction: column;
	gap: 16px;
	padding: 16px;
	position: fixed;
	right: calc(-1 * 300px - 32px);
	z-index: 9999;
	transition: right 0.1s;
	will-change: right;
	width: 300px;
	top: 70px;
	list-style-type: none;
	margin: 0;
	visibility: hidden;
}

body.dropdown-open #dropdown-nav {
	right: 0;
	transition: right 0.2s;
	visibility: visible;
}

#dropdown-nav li {
	color: var(--white);
	border-top-right-radius: 14px;
	corner-shape: bevel;
	font-family: 'Bebas Neue', sans-serif;
	font-size: 20px;
	overflow: hidden;
}

#dropdown-nav li:nth-child(4n-3) {
	background: var(--purple);
}

#dropdown-nav li:nth-child(4n-2) {
	background: var(--blue);
}

#dropdown-nav li:nth-child(4n-1) {
	background: var(--red);
}

#dropdown-nav li:nth-child(4n) {
	background: var(--yellow);
}

#dropdown-nav li#logout-link {
	background: var(--cyan);
}

#dropdown-nav li a {
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 8px;
	padding: 12px;
	color: inherit;
	text-transform: uppercase;
	text-decoration: none;
	transition: background-color 0.1s;
}

#dropdown-nav li a:hover,
#dropdown-nav li a:focus {
	background-color: rgba(0, 0, 0, 0.2);
	transition: background-color 0.03s;
}

#dropdown-close-overlay {
	position: fixed;
	z-index: -1;
	background: rgba(0,0,0,0.4);
	background: linear-gradient(to right, rgba(0,0,0,0.4), rgba(0,0,0,0.8));
	backdrop-filter: blur(1px);
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	pointer-events: none;
	opacity: 0;
	transition: opacity 0.1s;
	will-change: opacity, z-index;
}

.dropdown-open #dropdown-close-overlay {
	pointer-events: auto;
	opacity: 1;
	z-index: 9998;
}
/* ... */

